# quigo-backend

./: .env  .env.example  DATABASE_SCHEMA.md  add_api_key_column.py  add_column_script.py  auth.py  check_schema.py  check_schools.py  clear_database.py  clear_db.py  create_documents_table.py  credential_generator.py  database.py  education_systems.py  final_verify.txt  fix_db.py  force_add_column.py  full_check.txt  individual_auth.py  individual_endpoints.py  list_tables.py  main.py  manual_fix.py  migrate_google_keys.py  models.py  pyproject.toml  quizv2.db  requirements.txt  scan_results.txt  schemas.py  school_auth.py  seed_db.py  seed_railway.py  temp_endpoint.py  update_db.py
